# Push-reminders-to-the-email-according-to-the-duty-schedule

./: README.md  一键安装构建并启动.bat  集团工单值班表2026.xlsx
.cursor/hooks/state/: continual-learning.json
code/backend/: .env  duty_reminder.db  pyproject.toml  requirements.txt
code/backend/app/: main.py
code/backend/app/core/: config.py  database.py  scheduler.py
code/backend/app/models/: models.py
code/backend/app/routers/: __init__.py  ai_chat.py  contacts.py  logs.py  reminders.py  rules.py  schedule.py  settings.py  shift_changes.py  templates.py
code/backend/app/schemas/: schemas.py
code/backend/app/services/: ai_chat_service.py  excel_import_service.py  mail_service.py  reminder_service.py  template_service.py
code/backend/tests/: test_template_service.py
code/frontend/: index.html  package-lock.json  package.json
code/frontend/src/: App.vue  main.js
code/frontend/src/api/: http.js
code/frontend/src/components/: AiFloatingChat.vue
code/frontend/src/router/: index.js
code/frontend/src/views/: ContactsView.vue  LogsView.vue  RulesView.vue  ScheduleView.vue  SettingsView.vue  ShiftChangesView.vue  TemplatesView.vue
doc/: plan.md
docker/: .env.example  Dockerfile  docker-compose.yml
